<resources>
    <string name="app_name">Curso CNT Android</string>
    <string name="app_name_versions">Versión de Android</string>
    <string name="app_name_imc">Índice de masa corporal</string>
    <string name="app_name_an">Adivina el numero</string>
    <string name="app_name_webbrowser">Navegador</string>
    <string name="app_name_users">Usuarios</string>
    <string name="app_name_products">Productos</string>
    <string name="app_name_dogs">Galería de perros</string>
    <string name="app_name_tabs">Tabs</string>
    <string name="app_name_date_and_time">Fecha y hora</string>
    <string name="app_name_notifications">Notificaciones</string>
    <string name="app_name_maps">MapsActivity</string>
    <string name="app_name_auth">"Authenticacion to Firebase"</string>
    <string name="app_name_realtimedb">"Login to Firebase"</string>
    <string name="menu_clean">Limpiar</string>
    <string name="menu_exit">Salir</string>
    <string name="imc_hint_weight">Intro peso (kg)</string>
    <string name="imc_hint_height">Intro altura (m)</string>
    <string name="imc_result_message">Su IMC es %1f</string>
    <string name="an_hint_write_number">Escribe aquí o número</string>
    <string name="an_text_odds">Posibilidades</string>
    <string name="an_text_guess_number">Adivina el número</string>
    <string name="an_btn_check">Probar</string>
    <string name="an_text_msg_success">Has acertado campeón, ENHORABUENA!</string>
    <string name="an_text_msg_correct">Сorrecto!</string>
    <string name="an_text_msg_wrong_greater">¡Error! El número es mayor.</string>
    <string name="an_text_msg_wrong_less">¡Error! El número es menor.</string>
    <string name="an_text_msg_cantplay">Ya no puedes jugar más.</string>
    <string name="dogs_act_label">Galería de perros</string>
    <string name="dateandtime_hint_date">Fecha</string>
    <string name="dateandtime_hint_hour">Hora</string>
</resources>