<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="EJERCICIOS BÁSICOS">
        <menu>
            <item
                android:title="@string/app_name_versions"
                android:orderInCategory="0"
                android:icon="@drawable/menu_item_other"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_an"
                android:orderInCategory="1"
                android:icon="@drawable/menu_item_an"
                app:showAsAction="always" >
            </item>
        </menu>
    </item>

    <item android:title="EJERCICIOS INTERMEDIOS">
        <menu>
            <item
                android:title="@string/app_name_imc"
                android:orderInCategory="2"
                android:icon="@drawable/menu_item_imc"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_users"
                android:orderInCategory="3"
                android:icon="@drawable/menu_item_users"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_webbrowser"
                android:orderInCategory="4"
                android:icon="@drawable/menu_item_browser"
                app:showAsAction="always" >
            </item>
        </menu>
    </item>

    <item android:title="EJERCICIOS AVANZADOS">
        <menu>
            <item
                android:title="@string/app_name_products"
                android:orderInCategory="5"
                android:icon="@drawable/menu_item_products"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_dogs"
                android:orderInCategory="6"
                android:icon="@drawable/menu_item_dogs"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_tabs"
                android:orderInCategory="7"
                android:icon="@drawable/menu_item_other"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_date_and_time"
                android:orderInCategory="8"
                android:icon="@drawable/menu_item_other"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_notifications"
                android:orderInCategory="9"
                android:icon="@drawable/menu_item_other"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_maps"
                android:orderInCategory="10"
                android:icon="@drawable/menu_item_other"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_auth"
                android:orderInCategory="11"
                android:icon="@drawable/menu_item_other"
                app:showAsAction="always" >
            </item>
            <item
                android:title="@string/app_name_realtimedb"
                android:orderInCategory="12"
                android:icon="@drawable/menu_item_other"
                app:showAsAction="always" >
            </item>
        </menu>
    </item>
</menu>
