<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ANActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an_text_guess_number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button3"
            android:layout_width="272dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_posibilidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an_text_odds"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/an_hint_write_number"
            android:inputType="number" />

        <TextView
            android:id="@+id/txt_mensaxe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/an_hint_write_number"
            android:text=""
            android:textColor="#FF0000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="check"
            android:text="@string/an_btn_check" />

        <Button
            android:id="@+id/btn_restart"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

</LinearLayout>
