<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".an.ANActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewANTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adiviña el número"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewANChances"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an_text_odds"
            android:textAlignment="center" >
        </TextView>

        <EditText
            android:id="@+id/textViewANNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/an_hint_write_number"
            android:inputType="number" >
        </EditText>

        <TextView
            android:id="@+id/textViewANMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/an_hint_write_number"
            android:text=""
            android:textColor="#FF0000" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnANCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="check"
            android:text="@string/an_btn_check" >
        </Button>

        <Button
            android:id="@+id/btnANRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:onClick="restartGame"
            android:text="Restart" >
        </Button>
    </LinearLayout>

</LinearLayout>
